2007-11-12  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

PR c++/8570
cp/
	* pt.c (redeclare_class_template): Update error message. Use a
	note to show the previous declaration.
	(tsubst_friend_class): Use the location of the friend template as
	the input location before calling redeclare_class_template.
testsuite/
	* g++.old-deja/g++.ns/template13.C: Update expected output.
	* g++.old-deja/g++.pt/friend23.C: Likewise.
	* g++.dg/warn/pr8570.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130092 138bc75d-0d04-0410-961f-82ee72b054a4